--- a/title.tex
+++ b/title.tex
@@ -62,7 +62,7 @@
 \includegraphics[keepaspectratio=true, height=.1\textheight]
                 {img/logo-lip6.png}
 \hfill
-\includegraphics[keepaspectratio=true, height=.1\textheight]
-{img/cnrs}
+%\includegraphics[keepaspectratio=true, height=.1\textheight]
+%{img/cnrs}
 \restoregeometry
 \clearpage
