--- a/defense/main.tex
+++ b/defense/main.tex
@@ -1462,8 +1462,7 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 \begin{frame}
 \frametitle{CDCL[Sym] Implementation}
 \begin{itemize}
-	\item Packaged as a library \textbf{\libdsb}\footnote{\url{https://github.com/lip6/cosy}},
-	to be combined with your solver\\{\color{blue}\hfill$\rightarrow$ e.g. +3\% LOC on \minisat}.
+	\item Packaged as a library \textbf{\libdsb}\footnote{\url{https://github.com/lip6/cosy}}, to be combined with your solver\\{\color{blue}\hfill$\rightarrow$ e.g. +3\% LOC on \minisat}.
 	
 	\item Follows symmetry status
 	
@@ -1693,7 +1692,7 @@ In hybrid approach, SP must be able to identify\\ \textbf{valid symmetries}
 	\item A new dynamic symmetry breaking approach 
 	\begin{itemize}
 		\item Generation of SBP on the fly
-		\item Package as a library \libdsb usable with any CDCL solver
+		\item Package as a library $\libdsb$ usable with any CDCL solver
 		\item Overcomes drawbacks of the existing approaches
 	\end{itemize}
 
@@ -1710,7 +1709,7 @@ In hybrid approach, SP must be able to identify\\ \textbf{valid symmetries}
 \begin{frame}
 \frametitle{Perspectives}
 \begin{itemize}
-	\item Combination of ESBP with other dynamic symmetry breaking approach
+	\item Combination of CDCL[Sym] with other dynamic symmetry breaking approach
 
 	\vfill
 	\item Exploitation of partial symmetries
